add_library(engine
        engine_race.h
        engine_race.cc
        index.h
        util.h
        util.cc
        Bucket.cc
        Bucket.h
        log.cc
        log.h
        config.h
        read_seq_test.cc
        read_seq_test.h
        range_loader.cc
        range_loader.h
        mapped_buffer_manager.cc
        mapped_buffer_manager.h)
